--- a/index.html
+++ b/index.html
@@ -279,79 +279,81 @@
         </section>
 
         <section class="achievments sections" id="achievments">
-            <h2 class="achievments__h2" data-lang="achievments__h2">
-                Наші досягнення
-            </h2>
-            <ul class="achievments-list">
-                <li class="achievments-list__item">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 448 512"
-                    >
-                        <path
-                            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
-                        />
-                    </svg>
-                    <p
-                        class="achievments-list__item-text"
-                        data-lang="achievments-list__item-text-1"
-                    >
-                        На протязі часу роботи фірми ми працевлаштували понад
-                        1000 осіб
-                    </p>
-                </li>
-                <li class="achievments-list__item">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 448 512"
-                    >
-                        <path
-                            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
-                        />
-                    </svg>
-                    <p
-                        class="achievments-list__item-text"
-                        data-lang="achievments-list__item-text-2"
-                    >
-                        Швидке і якісне оформлення документів для легального
-                        перебування і праці на території Польщі
-                    </p>
-                </li>
-                <li class="achievments-list__item">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 448 512"
-                    >
-                        <path
-                            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
-                        />
-                    </svg>
-                    <p
-                        class="achievments-list__item-text"
-                        data-lang="achievments-list__item-text-3"
-                    >
-                        Говоримо на українській,польській, англійській,
-                        російській мовах
-                    </p>
-                </li>
-                <li class="achievments-list__item">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 448 512"
-                    >
-                        <path
-                            d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
-                        />
-                    </svg>
-                    <p
-                        class="achievments-list__item-text"
-                        data-lang="achievments-list__item-text-4"
-                    >
-                        Своєчасні виплати заробітної плати та повний пакет
-                        медичного страхування
-                    </p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="achievments__h2" data-lang="achievments__h2">
+                    Наші досягнення
+                </h2>
+                <ul class="achievments-list">
+                    <li class="achievments-list__item">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"
+                        >
+                            <path
+                                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                            />
+                        </svg>
+                        <p
+                            class="achievments-list__item-text"
+                            data-lang="achievments-list__item-text-1"
+                        >
+                            На протязі часу роботи фірми ми працевлаштували
+                            понад 1000 осіб
+                        </p>
+                    </li>
+                    <li class="achievments-list__item">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"
+                        >
+                            <path
+                                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                            />
+                        </svg>
+                        <p
+                            class="achievments-list__item-text"
+                            data-lang="achievments-list__item-text-2"
+                        >
+                            Швидке і якісне оформлення документів для легального
+                            перебування і праці на території Польщі
+                        </p>
+                    </li>
+                    <li class="achievments-list__item">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"
+                        >
+                            <path
+                                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                            />
+                        </svg>
+                        <p
+                            class="achievments-list__item-text"
+                            data-lang="achievments-list__item-text-3"
+                        >
+                            Говоримо на українській,польській, англійській,
+                            російській мовах
+                        </p>
+                    </li>
+                    <li class="achievments-list__item">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"
+                        >
+                            <path
+                                d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
+                            />
+                        </svg>
+                        <p
+                            class="achievments-list__item-text"
+                            data-lang="achievments-list__item-text-4"
+                        >
+                            Своєчасні виплати заробітної плати та повний пакет
+                            медичного страхування
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="certificats sections">
@@ -383,7 +385,7 @@
                 </svg>
             </span>
         </section>
-        <!-- 
+
         <section class="our-services sections" id="our-services">
             <div class="container">
                 <h2 class="our-services__h2" data-lang="our-services__h2">
@@ -431,7 +433,7 @@
                 </ul>
             </div>
         </section>
-
+        <!-- 
         <section class="countries sections">
             <h2 class="countries__h2">Країни-партнери</h2>
             <div class="container">
