--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 </ul>
             </div>
         </section>
-        <!-- 
+
         <section class="countries sections">
             <h2 class="countries__h2">Країни-партнери</h2>
             <div class="container">
@@ -484,7 +484,7 @@
             <div class="container">
                 <h4 class="footer__h4">© All Rights Reserved. MST Profi.</h4>
             </div>
-        </footer> -->
+        </footer>
     </body>
 
     <script src="js/localization.js"></script>
