--- a/index.html
+++ b/index.html
@@ -393,18 +393,36 @@
                 </h2>
                 <ul class="our-services-cards">
                     <li class="our-services-cards__item">
-                        <h4 class="our-services-cards__item-h4">Легалізація</h4>
-                        <p class="our-services-cards__item-p">
+                        <h4
+                            class="our-services-cards__item-h4"
+                            data-lang="our-services-cards__item-h4-1"
+                        >
+                            Легалізація
+                        </h4>
+                        <p
+                            class="our-services-cards__item-p"
+                            data-lang="our-services-cards__item-p-1"
+                        >
                             Ми надаємо всі необхідні документи, пов'язані з
                             перебуванням і легальною роботою в Польщі
                         </p>
-                        <span class="our-services-cards__item-button"
+                        <span
+                            class="our-services-cards__item-button"
+                            data-lang="our-services-cards__item-button"
                             >Детальніше</span
                         >
                     </li>
                     <li class="our-services-cards__item">
-                        <h4 class="our-services-cards__item-h4">Рекрутація</h4>
-                        <p class="our-services-cards__item-p">
+                        <h4
+                            class="our-services-cards__item-h4"
+                            data-lang="our-services-cards__item-h4-2"
+                        >
+                            Рекрутація
+                        </h4>
+                        <p
+                            class="our-services-cards__item-p"
+                            data-lang="our-services-cards__item-p-2"
+                        >
                             Робота в Польщі для іноземців. Якщо ви зацікавлені
                             легальною працею в Польщі, пропонуємо вам зв'язатися
                             з нами. Процес рекрутингу передбачає поряд із
@@ -412,21 +430,31 @@
                             додаткової інформації про кандидатів, підписання
                             контракту й адаптацію нових працівників
                         </p>
-                        <span class="our-services-cards__item-button"
+                        <span
+                            class="our-services-cards__item-button"
+                            data-lang="our-services-cards__item-button"
                             >Детальніше</span
                         >
                     </li>
                     <li class="our-services-cards__item">
-                        <h4 class="our-services-cards__item-h4">
+                        <h4
+                            class="our-services-cards__item-h4"
+                            data-lang="our-services-cards__item-h4-3"
+                        >
                             Кваліфікована підготовка спеціалістів до роботи
                         </h4>
-                        <p class="our-services-cards__item-p">
+                        <p
+                            class="our-services-cards__item-p"
+                            data-lang="our-services-cards__item-p-3"
+                        >
                             Якщо у Вас не має досвіду в зварювальних роботах -
                             це не проблема. Запишіться до нас на навчання
                             зварювальника, швидко і якісно опануєте нову
                             спеціальність
                         </p>
-                        <span class="our-services-cards__item-button"
+                        <span
+                            class="our-services-cards__item-button"
+                            data-lang="our-services-cards__item-button"
                             >Детальніше</span
                         >
                     </li>
@@ -435,7 +463,9 @@
         </section>
 
         <section class="countries sections">
-            <h2 class="countries__h2">Країни-партнери</h2>
+            <h2 class="countries__h2" data-lang="countries__h2">
+                Країни-партнери
+            </h2>
             <div class="container">
                 <div class="countries-list">
                     <img src="images/pl.png" alt="ua" /><img
@@ -455,21 +485,16 @@
         <section class="forma">
             <span class="forma__overlay"></span>
             <div class="forma-info">
-                <h1 class="forma-info__h1">
+                <h1 class="forma-info__h1" data-lang="forma-info__h1">
                     Отримуйте найактуальніші вакансії!
                 </h1>
-                <p class="forma-info__p">
+                <p class="forma-info__p" data-lang="forma-info__p">
                     Заповніть форму і ми одразу з Вами зв'яжемося!
                 </p>
-                <svg
-                    role="presentation"
-                    class="forma-info__arrow"
-                    fill="none"
-                    viewBox="0 0 80 180"
-                >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                     <path
-                        d="M54.1 108c-.5 0-.9-.2-1.2-.6-.5-.7-.3-1.6.4-2.1 1.5-1 9.5-5.5 14.6-8.3-17.4-.5-31.3-7.3-41.3-20C9.9 55.7 9.5 24.2 14.2 3.7c.2-.8 1-1.3 1.8-1.1.8.2 1.3 1 1.1 1.8-4.6 19.9-4.2 50.3 11.8 70.8 9.5 12.2 23 18.6 39.9 18.9h.3l-3.2-4c-1.4-1.7-2.7-3.3-4.1-5.1-.7-.9-1.5-1.9-2.3-2.9-.5-.6-.4-1.6.2-2.1.6-.5 1.6-.4 2.1.2 0 0 0 .1.1.1l6.4 7.9c.5.6.9 1.1 1.4 1.7 1.5 1.8 3.1 3.6 4.3 5.5 0 .1.1.1.1.2.1.2.1.3.2.5v.3c0 .2 0 .3-.1.5 0 .1-.1.1-.1.2-.1.2-.2.3-.3.4-.1.1-.2.1-.3.2 0 0-.1 0-.2.1-.9.4-16 8.6-18.2 10.1-.4 0-.7.1-1 .1z"
-                    ></path>
+                        d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
+                    />
                 </svg>
                 <button
                     class="get-vacancy-button"
