--- a/index.html
+++ b/index.html
@@ -508,6 +508,12 @@
         <footer class="footer sections">
             <div class="container">
                 <h4 class="footer__h4">© All Rights Reserved. MST Profi.</h4>
+
+                <div class="footer-contacts">
+                    <a href="tel:+48790799270">+48 790 799 270</a
+                    ><a href="tel:+48531584303">+48 531 584 303</a
+                    ><span>mstprofi.biuro@gmail.com</span>
+                </div>
             </div>
         </footer>
     </body>
