--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
                         class="header-logo__image"
                     />
 
-                    <h1 class="header-logo__text">
+                    <h1 class="header-logo__text h1-size-text">
                         MST
-                        <h1 class="header-logo__text-span">PROFI</h1>
+                        <h1 class="header-logo__text-span h1-size-text">
+                            PROFI
+                        </h1>
                     </h1>
                 </a>
 
@@ -156,13 +158,13 @@
                 <li class="hover-slider__item">
                     <div class="hover-slider__item-information">
                         <h1
-                            class="hover-slider__item-information-h1"
+                            class="hover-slider__item-information-h1 h1-size-text"
                             data-lang="hover-slider__item-information-h1-1"
                         >
                             В ПОШУКАХ РОБОТИ?
                         </h1>
                         <p
-                            class="hover-slider__item-information-p"
+                            class="hover-slider__item-information-p p-size-text"
                             data-lang="hover-slider__item-information-p-1"
                         >
                             Працюємо в багатьох регіонах Польщі
@@ -184,13 +186,13 @@
                 <li class="hover-slider__item">
                     <div class="hover-slider__item-information">
                         <h1
-                            class="hover-slider__item-information-h1"
+                            class="hover-slider__item-information-h1 h1-size-text"
                             data-lang="hover-slider__item-information-h1-2"
                         >
                             В ПОШУКАХ ПРАЦІВНИКІВ?
                         </h1>
                         <p
-                            class="hover-slider__item-information-p"
+                            class="hover-slider__item-information-p p-size-text"
                             data-lang="hover-slider__item-information-p-2"
                         >
                             Найпоширеніші вакансії: зварювальник, монтер,
@@ -213,13 +215,13 @@
                 <li class="hover-slider__item">
                     <div class="hover-slider__item-information">
                         <h1
-                            class="hover-slider__item-information-h1"
+                            class="hover-slider__item-information-h1 h1-size-text"
                             data-lang="hover-slider__item-information-h1-3"
                         >
                             ОФІЦІЙНЕ ПРАЦЕВЛАШТУВАННЯ
                         </h1>
                         <p
-                            class="hover-slider__item-information-p"
+                            class="hover-slider__item-information-p p-size-text"
                             data-lang="hover-slider__item-information-p-3"
                         >
                             Швидке і якісне оформлення документів для легального
@@ -247,13 +249,13 @@
                 <div class="about-us-block">
                     <div class="about-us-block__info">
                         <h2
-                            class="about-us-block__info-h2"
+                            class="about-us-block__info-h2 h2-size-text"
                             data-lang="about-us-block__info-h2"
                         >
                             Про нас
                         </h2>
                         <p
-                            class="about-us-block__info-p"
+                            class="about-us-block__info-p p-size-text"
                             data-lang="about-us-block__info-p"
                         >
                             Фірма працює з 2021 по всій території Польщі,
@@ -282,7 +284,10 @@
 
         <section class="achievments sections" id="achievments" data-inert>
             <div class="container">
-                <h2 class="achievments__h2" data-lang="achievments__h2">
+                <h2
+                    class="achievments__h2 h2-size-text"
+                    data-lang="achievments__h2"
+                >
                     Наші досягнення
                 </h2>
                 <ul class="achievments-list">
@@ -296,7 +301,7 @@
                             />
                         </svg>
                         <p
-                            class="achievments-list__item-text"
+                            class="achievments-list__item-text p-size-text"
                             data-lang="achievments-list__item-text-1"
                         >
                             На протязі часу роботи фірми ми працевлаштували
@@ -313,7 +318,7 @@
                             />
                         </svg>
                         <p
-                            class="achievments-list__item-text"
+                            class="achievments-list__item-text p-size-text"
                             data-lang="achievments-list__item-text-2"
                         >
                             Швидке і якісне оформлення документів для легального
@@ -330,7 +335,7 @@
                             />
                         </svg>
                         <p
-                            class="achievments-list__item-text"
+                            class="achievments-list__item-text p-size-text"
                             data-lang="achievments-list__item-text-3"
                         >
                             Говоримо на українській,польській, англійській,
@@ -347,7 +352,7 @@
                             />
                         </svg>
                         <p
-                            class="achievments-list__item-text"
+                            class="achievments-list__item-text p-size-text"
                             data-lang="achievments-list__item-text-4"
                         >
                             Своєчасні виплати заробітної плати та повний пакет
@@ -397,7 +402,10 @@
 
         <section class="our-services sections" id="our-services" data-inert>
             <div class="container">
-                <h2 class="our-services__h2" data-lang="our-services__h2">
+                <h2
+                    class="our-services__h2 h2-size-text"
+                    data-lang="our-services__h2"
+                >
                     Наші послуги
                 </h2>
                 <ul class="our-services-cards">
@@ -409,7 +417,7 @@
                             Легалізація
                         </h4>
                         <p
-                            class="our-services-cards__item-p"
+                            class="our-services-cards__item-p p-size-text"
                             data-lang="our-services-cards__item-p-1"
                         >
                             Ми надаємо всі необхідні документи, пов'язані з
@@ -429,7 +437,7 @@
                             Рекрутація
                         </h4>
                         <p
-                            class="our-services-cards__item-p"
+                            class="our-services-cards__item-p p-size-text"
                             data-lang="our-services-cards__item-p-2"
                         >
                             Робота в Польщі для іноземців. Якщо ви зацікавлені
@@ -453,7 +461,7 @@
                             Кваліфікована підготовка спеціалістів до роботи
                         </h4>
                         <p
-                            class="our-services-cards__item-p"
+                            class="our-services-cards__item-p p-size-text"
                             data-lang="our-services-cards__item-p-3"
                         >
                             Якщо у Вас не має досвіду в зварювальних роботах -
@@ -472,7 +480,7 @@
         </section>
 
         <section class="countries sections" data-inert>
-            <h2 class="countries__h2" data-lang="countries__h2">
+            <h2 class="countries__h2 h2-size-text" data-lang="countries__h2">
                 Країни-партнери
             </h2>
             <div class="container">
@@ -494,10 +502,13 @@
         <section class="forma" data-inert>
             <span class="forma__overlay"></span>
             <div class="forma-info">
-                <h1 class="forma-info__h1" data-lang="forma-info__h1">
+                <h1
+                    class="forma-info__h1 h1-size-text"
+                    data-lang="forma-info__h1"
+                >
                     Отримуйте найактуальніші вакансії!
                 </h1>
-                <p class="forma-info__p" data-lang="forma-info__p">
+                <p class="forma-info__p p-size-text" data-lang="forma-info__p">
                     Заповніть форму і ми одразу з Вами зв'яжемося!
                 </p>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
