--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <span>+48 531 584 303</span>
                     </a>
                 </ul>
-                <div class="header-language">
+                <button class="header-language">
                     <div class="header-language__main">
                         <span class="header-language__main-selected">PL</span>
                         <svg
@@ -74,7 +74,7 @@
                         <li class="header-language__item" data-btn="ua">UA</li>
                         <li class="header-language__item" data-btn="ru">RU</li>
                     </ul>
-                </div>
+                </button>
 
                 <button class="header__burger">
                     <span></span>
@@ -543,6 +543,16 @@
             class="form-modal modal"
             data-modal-form
         >
+            <button class="modal__close">
+                <svg viewBox="0 0 23 23" fill="none">
+                    <path
+                        d="M1.41421 -0.000151038L0 1.41406L21.2132 22.6273L22.6274 21.2131L1.41421 -0.000151038Z"
+                    ></path>
+                    <path
+                        d="M22.6291 1.41421L21.2148 0L0.00164068 21.2132L1.41585 22.6274L22.6291 1.41421Z"
+                    ></path>
+                </svg>
+            </button>
             <div class="form-modal-inner modal__inner">
                 <img
                     src="images/form-banner.png"
@@ -575,17 +585,6 @@
                     </button>
                 </form>
             </div>
-
-            <button class="modal__close">
-                <svg viewBox="0 0 23 23" fill="none">
-                    <path
-                        d="M1.41421 -0.000151038L0 1.41406L21.2132 22.6273L22.6274 21.2131L1.41421 -0.000151038Z"
-                    ></path>
-                    <path
-                        d="M22.6291 1.41421L21.2148 0L0.00164068 21.2132L1.41585 22.6274L22.6291 1.41421Z"
-                    ></path>
-                </svg>
-            </button>
         </div>
     </body>
 
