--- a/index.html
+++ b/index.html
@@ -559,31 +559,36 @@
                     alt="Баннер"
                     class="form-modal-inner__img"
                 />
-                <h4 class="form-modal-inner__h4">Bądźmy w kontakcie!</h4>
-                <p class="form-modal-inner__p">
-                    Wypełnij poniższy formularz, a my skontaktujemy się z Tobą!
-                </p>
-                <form class="form-modal-inner-form" action="">
-                    <input
-                        class="form-modal-inner-form__input"
-                        placeholder="Twoje imię"
-                        type="text"
-                    />
-                    <input
-                        class="form-modal-inner-form__input"
-                        placeholder="Twój numer telefonu"
-                        type="tel"
-                        name="telefon"
-                        id="telF"
-                    />
+                <div class="form-modal-inner-info">
+                    <h4 class="form-modal-inner-info__h4">
+                        Bądźmy w kontakcie!
+                    </h4>
+                    <p class="form-modal-inner-info__p">
+                        Wypełnij poniższy formularz, a my skontaktujemy się z
+                        Tobą!
+                    </p>
+                    <form class="form-modal-inner-form" action="">
+                        <input
+                            class="form-modal-inner-form__input"
+                            placeholder="Twoje imię"
+                            type="text"
+                        />
+                        <input
+                            class="form-modal-inner-form__input"
+                            placeholder="Twój numer telefonu"
+                            type="tel"
+                            name="telefon"
+                            id="telF"
+                        />
 
-                    <button
-                        class="form-modal-inner-form__submit-button"
-                        type="submit"
-                    >
-                        Wysłać
-                    </button>
-                </form>
+                        <button
+                            class="form-modal-inner-form__submit-button"
+                            type="submit"
+                        >
+                            Wysłać
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </body>
