--- a/index.html
+++ b/index.html
@@ -550,10 +550,16 @@
                     class="form-modal-inner__img"
                 />
                 <div class="form-modal-inner-info">
-                    <h4 class="form-modal-inner-info__h4">
+                    <h4
+                        class="form-modal-inner-info__h4"
+                        data-lang="form-modal-inner-info__h4"
+                    >
                         Bądźmy w kontakcie!
                     </h4>
-                    <p class="form-modal-inner-info__p">
+                    <p
+                        class="form-modal-inner-info__p"
+                        data-lang="form-modal-inner-info__p"
+                    >
                         Wypełnij poniższy formularz, a my skontaktujemy się z
                         Tobą!
                     </p>
@@ -562,6 +568,7 @@
                             class="form-modal-inner-form__input"
                             placeholder="Twoje imię"
                             type="text"
+                            data-lang="form-modal-inner-form__input-1"
                         />
                         <input
                             class="form-modal-inner-form__input"
@@ -569,11 +576,13 @@
                             type="tel"
                             name="telefon"
                             id="telF"
+                            data-lang="form-modal-inner-form__input-2"
                         />
 
                         <button
                             class="form-modal-inner-form__submit-button"
                             type="submit"
+                            data-lang="form-modal-inner-form__submit-button"
                         >
                             Wysłać
                         </button>
