--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <span>+48 531 584 303</span>
                     </a>
                 </ul>
-                <button class="header-language">
-                    <div class="header-language__main">
+                <div class="header-language">
+                    <button class="header-language__main">
                         <span class="header-language__main-selected">PL</span>
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -67,14 +67,22 @@
                                 d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                             />
                         </svg>
+                    </button>
+                    <div class="header-language__items">
+                        <button class="header-language__item" data-btn="pl">
+                            PL
+                        </button>
+                        <button class="header-language__item" data-btn="en">
+                            EN
+                        </button>
+                        <button class="header-language__item" data-btn="ua">
+                            UA
+                        </button>
+                        <button class="header-language__item" data-btn="ru">
+                            RU
+                        </button>
                     </div>
-                    <ul class="header-language__items">
-                        <li class="header-language__item" data-btn="pl">PL</li>
-                        <li class="header-language__item" data-btn="en">EN</li>
-                        <li class="header-language__item" data-btn="ua">UA</li>
-                        <li class="header-language__item" data-btn="ru">RU</li>
-                    </ul>
-                </button>
+                </div>
 
                 <button class="header__burger">
                     <span></span>
@@ -106,7 +114,7 @@
             </a>
 
             <div class="header-language">
-                <div class="header-language__main">
+                <button class="header-language__main">
                     <span class="header-language__main-selected">PL</span>
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -116,13 +124,21 @@
                             d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                         />
                     </svg>
+                </button>
+                <div class="header-language__items">
+                    <button class="header-language__item" data-btn="pl">
+                        PL
+                    </button>
+                    <button class="header-language__item" data-btn="en">
+                        EN
+                    </button>
+                    <button class="header-language__item" data-btn="ua">
+                        UA
+                    </button>
+                    <button class="header-language__item" data-btn="ru">
+                        RU
+                    </button>
                 </div>
-                <ul class="header-language__items">
-                    <li class="header-language__item" data-btn="pl">PL</li>
-                    <li class="header-language__item" data-btn="en">EN</li>
-                    <li class="header-language__item" data-btn="ua">UA</li>
-                    <li class="header-language__item" data-btn="ru">RU</li>
-                </ul>
             </div>
         </nav>
 
