--- a/index.html
+++ b/index.html
@@ -164,12 +164,6 @@
                 </svg>
             </button>
 
-            <ul class="hover-slider-nav">
-                <li class="hover-slider-nav__item"></li>
-                <li class="hover-slider-nav__item"></li>
-                <li class="hover-slider-nav__item"></li>
-            </ul>
-
             <ul class="hover-slider">
                 <li class="hover-slider__item">
                     <div class="hover-slider__item-information">
@@ -258,6 +252,12 @@
                     />
                 </li>
             </ul>
+
+            <div class="hover-slider-nav">
+                <button class="hover-slider-nav__item"></button>
+                <button class="hover-slider-nav__item"></button>
+                <button class="hover-slider-nav__item"></button>
+            </div>
         </section>
 
         <section class="about-us sections" id="about-us" data-inert>
@@ -439,11 +439,12 @@
                             Ми надаємо всі необхідні документи, пов'язані з
                             перебуванням і легальною роботою в Польщі
                         </p>
-                        <span
+                        <button
                             class="our-services-cards__item-button"
                             data-lang="our-services-cards__item-button"
-                            >Детальніше</span
                         >
+                            Детальніше
+                        </button>
                     </li>
                     <li class="our-services-cards__item">
                         <h4
@@ -463,11 +464,12 @@
                             додаткової інформації про кандидатів, підписання
                             контракту й адаптацію нових працівників
                         </p>
-                        <span
+                        <button
                             class="our-services-cards__item-button"
                             data-lang="our-services-cards__item-button"
-                            >Детальніше</span
                         >
+                            Детальніше
+                        </button>
                     </li>
                     <li class="our-services-cards__item">
                         <h4
@@ -485,11 +487,12 @@
                             зварювальника, швидко і якісно опануєте нову
                             спеціальність
                         </p>
-                        <span
+                        <button
                             class="our-services-cards__item-button"
                             data-lang="our-services-cards__item-button"
-                            >Детальніше</span
                         >
+                            Детальніше
+                        </button>
                     </li>
                 </ul>
             </div>
